--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,4 +34,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+section{
+  position: relative;
 }
