--- a/src/HTCompany/HTCompany.css
+++ b/src/HTCompany/HTCompany.css
@@ -1,7 +1,4 @@
 .HTCompany {
     text-align: center;
+    position: absolute;
 }
-.HTCompany-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
