--- a/src/HTSweetNews/HTSweetNews.css
+++ b/src/HTSweetNews/HTSweetNews.css
@@ -1,7 +1,104 @@
 .HTSweetNews {
+    position: absolute;    
+
+}
+.section5{
+    text-align: center;
+    height: 1000px;
+    background-color: rgb(235, 225, 211);
+}
+
+.np_title{
+    padding-top: 72px;
     text-align: center;
 }
-.HTSweetNews-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
+
+.news_wrap{
+    padding-top: 13px;
+    padding-left: 0px;
+    width: 918px;
+    height: 200px;
+    margin: 0 auto;
+}
+.news_wrap li{
+    list-style: none;
+    position: relative;
+    width: 296px;
+    height: 196px;
+    background: #fff;
+    margin-left: 5px;
+    color: #333333;
+    border: 2px solid #fff;
+    float: left;
+    cursor: pointer;
+}
+
+.noti{
+    padding: 20px 20px;
+    height: 100%;
+    font-size: 12px;
+    letter-spacing: -0.05em;
+    overflow: hidden;
+    
+}
+
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+
+.tit-noti {
+    background: url(./borderdot.png) 0px 15px repeat-x;
+    color: #4d4d4d;
+    width: 100%;
+    padding-top: 38px;
+    font-size: 18px;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    line-height: 1.2em;
+    height: 2.4em;
+}
+
+.txt-noti {
+    color: #999999;
+    background: url(./border6.png) 0px 1px no-repeat;
+    font-size: 13px;
+    letter-spacing: -0.01em;
+    padding-top: 15px;
+    margin-top: 12px;
+    color: #a6a198;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    word-wrap: break-word;
+    line-height: 1.2em;
+    height: 2.4em;
+}
+
+.red {
+    color: #ec1d85!important;
+}
+.fl {
+    float: left;
+}
+.bold, strong {
+    font-family: 'Nanum GothicB';
+    font-weight: 400;
+}
+
+.greylight {
+    color: #b2aea4;
+}
+.fr {
+    float: right;
+}
